reports/notebooks/4_Predictability_of_KL_divergence.err.log
Traceback (most recent call last):
  File "/home/danbot/Documents/code/data_analysis/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/home/danbot/Documents/code/data_analysis/lib/python3.10/site-packages/nbclient/client.py", line 1263, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/danbot/Documents/code/data_analysis/lib/python3.10/site-packages/nbclient/util.py", line 85, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/danbot/Documents/code/data_analysis/lib/python3.10/site-packages/nbclient/util.py", line 60, in just_run
    return loop.run_until_complete(coro)
  File "/usr/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/home/danbot/Documents/code/data_analysis/lib/python3.10/site-packages/nbclient/client.py", line 701, in async_execute
    await self.async_execute_cell(
  File "/home/danbot/Documents/code/data_analysis/lib/python3.10/site-packages/nbclient/client.py", line 1019, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/danbot/Documents/code/data_analysis/lib/python3.10/site-packages/nbclient/client.py", line 913, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
priors_to_test = [-2, -1, 0, 1, 2]

for prior in priors_to_test;
    target_col = f'dkl_{concurrent}_post_{prior}R'

    test_results_fname = f'{target_col}_{prior}_prior_results.npy'
    test_results_fpath = os.path.join('data', test_results_fname)
    if os.path.exists(test_results_fpath):
        all_test_results = np.load(test_results_fpath, allow_pickle=True).item()
    else:
        all_test_results = predict_TVD_from_attributes(target_col, holdout_pct, station_ids, nfolds, results_folder)
    np.save(test_results_fpath, all_test_results)
------------------

[0;36m  Cell [0;32mIn [8], line 3[0;36m[0m
[0;31m    for prior in priors_to_test;[0m
[0m                               ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (373183298.py, line 3)

